change link and color

--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
         h3{
             font-size: 32px;
         }
+        a{
+            color:white;
+        }
         .interest-kind{
             position: absolute;
         }
@@ -203,12 +206,12 @@
     </div>
     <div class="home-page-bottom">
         <div class="home-join">
-            <button class="mw-ui-button mw-ui-progressive mw-ui-big"><a href="huiji.wiki/index.php?title=特殊:用户登录&type=signup">注册用户</a></button>
+            <button class="mw-ui-button mw-ui-progressive mw-ui-big"><a href="http://home.huiji.wiki/index.php?title=特殊:用户登录&type=signup">注册用户</a></button>
             <h3>你的兴趣 在此起飞</h3>
             <div class="interest-kind"></div>
         </div>
         <div class="home-use">
-            <button class="mw-ui-button mw-ui-constructive mw-ui-big"><a>创建站点</a></button>
+            <button class="mw-ui-button mw-ui-constructive mw-ui-big"><a href="http://home.huiji.wiki">创建站点</a></button>
             <h3>有多热爱 就飞多高</h3>
         </div>
     </div>
